# gitta

./: nfpm.yaml  pyproject.toml
.github/workflows/: nightly.yml  release.yml
docs/: README.md
packaging/repo-signer/: README.md
src/gitta/: cli.py
src/gitta/tui/: app.py
src/gitta/tui/themes/: dark.css  dracula.css  light.css
